Update and rename aim1 (1).ipynb to code/aim1.ipynb

--- a/code/aim1.ipynb
+++ b/code/aim1.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import the modules I need for the analysis and the paths where the data are stores, all inclueded in the [conf_files](http://localhost:8888/notebooks/Documents/links%20between%20air%20pollution%20and%20covid19/conf_files.ipynb)"
+    "Import the modules I need for the analysis and the paths where the data are stores, all inclueded in the [conf_files](https://github.com/clarabiagi/link-between-covid19-and-air-pollutions/blob/main/conf_files%20(1).ipynb)"
    ]
   },
   {
