--- a/code/aim1.ipynb
+++ b/code/aim1.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import the modules I need for the analysis and the paths where the data are stores, all inclueded in the [conf_files](https://github.com/clarabiagi/link-between-covid19-and-air-pollutions/blob/main/conf_files%20(1).ipynb)"
+    "Import the modules I need for the analysis and the paths where the data are stores, all inclueded in the [conf_files](https://github.com/clarabiagi/link-between-covid19-and-air-pollutions/blob/main/covid_air_dt_creation.ipynb)"
    ]
   },
   {
