--- a/code/aim1 (3).ipynb
+++ b/code/aim1 (3).ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "### AIM 1: PRELIMINARY ANALYSIS AND REGIONAL LEVEL ANALYSIS ###\n",
-    "1. [Data visualization](#preliminary)\n",
+    "1. [Data-visualization](#preliminary)\n",
     "2. [Link between COVID-19 deaths and air pollution](#deaths)\n",
     "3. [Link between COVID-19 cases and air pollution](#cases)"
    ]
