--- a/code/aim1.ipynb
+++ b/code/aim1.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "### AIM 1: PRELIMINARY ANALYSIS AND REGIONAL LEVEL ANALYSIS ###\n",
-    "1. [Data visualization](#preliminary)\n",
+    "1. [Data visualization](#preliminary-1)\n",
     "2. [Link between COVID-19 deaths and air pollution](#deaths)\n",
     "3. [Link between COVID-19 cases and air pollution](#cases)\n",
     "4. [conclusion](#end)"
@@ -352,7 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <a id='preliminary'></a>\n",
+    " <a id='preliminary-1'></a>\n",
     "### Visualize the distribution of each variable"
    ]
   },
