--- a/code/aim1.ipynb
+++ b/code/aim1.ipynb
@@ -481,7 +481,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Other regional level visualization can be found in the [regional level map notebook](../Maps/regional_level_map.ipynb)"
+    "Other regional level visualization about [nitrogen dioxide](Maps/nitroge_dioxide_map.ipynb), [nitrogen oxide](Maps/nitroge_oxide_map.ipynb), [ozone](Maps/ozone_map.ipynb), [reported cases](Maps/reported_cases_map.ipynb), [reported deaths](Maps/reported_deaths_map.ipynb) are in the linked notebooks."
    ]
   },
   {
