--- a/code/functions.ipynb
+++ b/code/functions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import the modules needed"
+    "### Creation of the functions"
    ]
   },
   {
