Add existing file

--- a/code/Maps/ozone_map.ipynb
+++ b/code/Maps/ozone_map.ipynb
@@ -20,14 +20,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../code/conf_files.ipynb"
+    "%run ../conf_files.ipynb"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Read the [geojson dataset](../Data/datasets.ipynb#eng) (with the geometry) and the [preL_dt](..Data/datasets.ipynb#preL_dt) (with the information about nitrogen ozone that I want to map)"
+    "Read the geojson dataset (with the geometry) and the [preL_dt](../../Data/datasets.ipynb#preL_dt) (with the information about nitrogen ozone that I want to map)"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "england = open(\"../Data/NHS_England_Regions_(April_2020)_Boundaries_EN_BFC.geojson\", \"r\")\n",
+    "england = open(\"../../data/NHS_England_Regions_(April_2020)_Boundaries_EN_BFC.geojson\", \"r\")\n",
     "england = england.read()\n",
     "england = json.loads(england)\n",
     "preL_dt = pd.read_csv(\"%s/26-4-2020_yyAIR_COVID_PRE_LD_dt.csv\" %path)"
@@ -86,16 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'../data_out/map_ozone.html'"
+       "'../../data/data_output/map_ozone.html'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
     "                           center = {\"lat\": 53, \"lon\": 0},\n",
     "                          color_continuous_scale = 'blues',\n",
     "                          title = 'Ozone levels')\n",
-    "plotly.offline.plot(fig_ozone, filename='../data_out/map_ozone.html')\n",
+    "plotly.offline.plot(fig_ozone, filename='../../data/data_output/map_ozone.html')\n",
     "#fig_ozone.show()"
    ]
   }
