--- a/code/Maps/reported_cases_map.ipynb
+++ b/code/Maps/reported_cases_map.ipynb
@@ -16,27 +16,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../code/conf_files.ipynb"
+    "%run ../conf_files.ipynb"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Read the [geojson dataset](../Data/datasets.ipynb#eng) (with the geometry) and the [preL_dt](..Data/datasets.ipynb#preL_dt) (with the information about reported cases that I want to map)"
+    "Read the geojson dataset (with the geometry) and the [preL_dt](../../Data/datasets.ipynb#preL_dt) (with the information about reported cases that I want to map)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "england = open(\"../Data/NHS_England_Regions_(April_2020)_Boundaries_EN_BFC.geojson\", \"r\")\n",
+    "england = open(\"../../data/NHS_England_Regions_(April_2020)_Boundaries_EN_BFC.geojson\", \"r\")\n",
     "england = england.read()\n",
     "england = json.loads(england)\n",
     "preL_dt = pd.read_csv(\"%s/26-4-2020_yyAIR_COVID_PRE_LD_dt.csv\" %path)"
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "'../data_out/map_cases.html'"
+       "'../../data/data_output/map_cases.html'"
       ]
      },
      "execution_count": 6,
@@ -112,7 +112,7 @@
     "                            color_continuous_scale = 'blues',\n",
     "                          title = 'COVID-19 (reported cases)')\n",
     "#fig_cases.show()\n",
-    "plotly.offline.plot(fig_cases, filename='../data_out/map_cases.html')"
+    "plotly.offline.plot(fig_cases, filename='../../data/data_output/map_cases.html')"
    ]
   }
  ],
