--- a/code/Maps/reported_deaths_map.ipynb
+++ b/code/Maps/reported_deaths_map.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Nitrogen oxide map"
+    "### Reported deaths map"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Read the geojson dataset (with the geometry) and the [preL_dt](../../Data/datasets.ipynb#preL_dt) (with the information about nitrogen oxide that I want to map)"
+    "Read the geojson dataset (with the geometry) and the [preL_dt](../../Data/datasets.ipynb#preL_dt) (with the information about reported deaths that I want to map)"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "preL_dt.loc[preL_dt['Region'] =='East Of England','Region'] = 'East of England'\n",
-    "preL_dt.loc[preL_dt['Region'] =='North East And Yorkshire','Region'] = 'North East and Yorkshire'\n"
+    "preL_dt.loc[preL_dt['Region'] =='North East And Yorkshire','Region'] = 'North East and Yorkshire'"
    ]
   },
   {
@@ -73,7 +73,6 @@
     "for feature in england['features']:\n",
     "    feature['id']=feature['properties']['objectid']\n",
     "    area[feature['properties']['nhser20nm']]=feature['id']\n",
-    "\n",
     "preL_dt['id']=preL_dt['Region'].apply(lambda x: area[x])"
    ]
   },
@@ -92,7 +91,7 @@
     {
      "data": {
       "text/plain": [
-       "'../../data/data_output/map_oxide.html'"
+       "'../../data/data_output/map_deaths.html'"
       ]
      },
      "execution_count": 6,
@@ -101,18 +100,18 @@
     }
    ],
    "source": [
-    "fig_oxide = px.choropleth_mapbox(preL_dt, \n",
+    "fig_deaths = px.choropleth_mapbox(preL_dt, \n",
     "                           locations=\"id\", \n",
     "                           featureidkey='properties.objectid', \n",
-    "                           geojson=england, color='NO.levels', \n",
+    "                           geojson=england, color='Deaths', \n",
     "                           hover_name='Region', \n",
     "                           mapbox_style='white-bg', \n",
     "                           zoom=4.5, \n",
     "                           center = {\"lat\": 53, \"lon\": 0},\n",
     "                          color_continuous_scale = 'blues',\n",
-    "                          title = 'Nitrogen oxide')\n",
-    "#fig_oxide.show()\n",
-    "plotly.offline.plot(fig_oxide, filename='../../data/data_output/map_oxide.html')"
+    "                          title = 'COVID-19 (reported deaths)')\n",
+    "#fig_deaths.show()\n",
+    "plotly.offline.plot(fig_deaths, filename='../../data/data_output/map_deaths.html')"
    ]
   }
  ],
