--- a/code/Maps/nitroge_dioxide_map.ipynb
+++ b/code/Maps/nitroge_dioxide_map.ipynb
@@ -16,27 +16,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../code/conf_files.ipynb"
+    "%run ../conf_files.ipynb"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Read the [geojson dataset](../Data/datasets.ipynb#eng) (with the geometry) and the [preL_dt](..Data/datasets.ipynb#preL_dt) (with the information about nitrogen oxide that I want to map)"
+    "Read the geojson (with the geometry) and the [preL_dt](../../Data/datasets.ipynb#preL_dt) (with the information about nitrogen oxide that I want to map)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "england = open(\"../Data/NHS_England_Regions_(April_2020)_Boundaries_EN_BFC.geojson\", \"r\")\n",
+    "england = open(\"../../data/NHS_England_Regions_(April_2020)_Boundaries_EN_BFC.geojson\", \"r\")\n",
     "england = england.read()\n",
     "england = json.loads(england)\n",
     "preL_dt = pd.read_csv(\"%s/26-4-2020_yyAIR_COVID_PRE_LD_dt.csv\" %path)"
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,16 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'../data_out/map_dioxide.html'"
+       "'../../data/data_output/map_dioxide.html'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
     "                          title = 'Nitrogen dioxide',\n",
     "                          labels = {'NO2.levels':'AQ value (mg m3)'})\n",
     "#fig_dioxide.show()\n",
-    "plotly.offline.plot(fig_dioxide, filename='../data_out/map_dioxide.html')"
+    "plotly.offline.plot(fig_dioxide, filename='../../data/data_output/map_dioxide.html')"
    ]
   }
  ],
