--- a/data/datasets.ipynb
+++ b/data/datasets.ipynb
@@ -28,8 +28,7 @@
     "    - [covid_air_dt_5YA](#covid_air_dt_5YA)\n",
     "    - [avgEarnings_2014, avgEarnings_2015, avgEarnings_2016, avgEarnings_2017, avgEarnings_2018](#avgEarnings)\n",
     "    - [Pop_density_5ya](#Pop_density_5ya)\n",
-    "    - [age_5ya](#age_5ya)\n",
-    "- [Maps](../code/Maps.ipynb)\n"
+    "    - [age_5ya](#age_5ya)\n"
    ]
   },
   {
