--- a/code/Maps/nitroge_dioxide_map.ipynb
+++ b/code/Maps/nitroge_dioxide_map.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Read the geojson (with the geometry) and the [preL_dt](../../Data/datasets.ipynb#preL_dt) (with the information about nitrogen oxide that I want to map)"
+    "Read the geojson (with the geometry) and the [preL_dt](../../data/datasets.ipynb#preL_dt) (with the information about nitrogen oxide that I want to map)"
    ]
   },
   {
