--- a/code/Air_poll_assignment.ipynb
+++ b/code/Air_poll_assignment.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Read the first dataset, that is [merged_covid_dt](../Data/datasets.ipynb#merged_covid_dt), created in the [aim2](./aim2.ipynb#merged_covid_dt)"
+    "Read the first dataset, that is [merged_covid_dt](../data/datasets.ipynb#merged_covid_dt), created in the [aim2](./aim2.ipynb#merged_covid_dt)"
    ]
   },
   {
@@ -240,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The datasets about pollutants are read. They are all described in the linked notebook: [pm25_df, pm10_df, no2_df, o3_df, so2_df, nox_df](../Data/datasets.ipynb#pollutant_df)"
+    "The datasets about pollutants are read. They are all described in the linked notebook: [pm25_df, pm10_df, no2_df, o3_df, so2_df, nox_df](../data/datasets.ipynb#pollutant_df)"
    ]
   },
   {
