--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "source": [
     "## Results\n",
-    "### [Regional level]('code/aim1.ipynb'): \n",
+    "### [Regional level]('./code/aim1.ipynb'): \n",
     "The pollutants of interest are nitrogen oxide and dioxide and ozone. \n",
     "Population density is included as confounder.\n",
     "\n",
