--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "source": [
     "## Results\n",
-    "### [Regional level]('./code/aim1.ipynb'): \n",
+    "### [Regional level](./code/aim1.ipynb): \n",
     "The pollutants of interest are nitrogen oxide and dioxide and ozone. \n",
     "Population density is included as confounder.\n",
     "\n",
@@ -37,7 +37,7 @@
     "- no is significantly associated to the expected number of cases with a negative sign\n",
     "- no2 is significantly associated with the expected number of cases with a positive sign\n",
     "\n",
-    "### [Subregional level]('code/aim2.ipynb'): \n",
+    "### [Subregional level](code/aim2.ipynb): \n",
     "The pollutants of interest are nitrogen oxide, nitrigen dioxide, solfur dioxide, ozone, particulate matter with an aerodynamic diameter < 2.5 μm and < 10.0 μm.\n",
     "\n",
     "Mean annual earnings, median age and population density are included as confounder\n",
@@ -71,8 +71,8 @@
     "## Discussion\n",
     "I found the article very interesting and precise. All the data involved were presented in detail and the problem was clearly explained. \n",
     "However, I personally would have done something differently: \n",
-    "- in the [regional level analysis]('code/aim1.ipynb') I think that fitting a linear model is quite useless. It is clear from the beginning that it could not be a good model because there are just 7 observations.\n",
-    "- in the [subregional level analysis]('code/aim2.ipynb') only univariate model are considered. I would have analysed a complete model with all the pollutants together. In this way, we could have seen the effect of single pollutants keeping constant the others.  \n",
+    "- in the [regional level analysis](code/aim1.ipynb) I think that fitting a linear model is quite useless. It is clear from the beginning that it could not be a good model because there are just 7 observations.\n",
+    "- in the [subregional level analysis](code/aim2.ipynb) only univariate model are considered. I would have analysed a complete model with all the pollutants together. In this way, we could have seen the effect of single pollutants keeping constant the others.  \n",
     "- Pollutants used in the two different levels are not the sames. I would have included also in the regional level models pm10 and pm25.\n",
     "- Solfure dioxide, which turns out to be significant in some subregional analysis, is not even mentioned in the article. I would have included it in all the models.\n",
     "- Performing the analysis in three different levels is in some ways confusing in my opinion. Results are different for different levels and this makes difficult to have a unique and final interpretation. The ozone, as example, is a protective factor for the expected number of deaths at regional and subregional level and for the COVID-19 cases at subregional level but is not significant for the expected number of cases at regional level. I have not performed the individual level analysis but in the articole is mentioned that ozone is not significant at that level.\n",
