--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -77,7 +77,7 @@
     "- Solfure dioxide, which turns out to be significant in some subregional analysis, is not even mentioned in the article. I would have included it in all the models.\n",
     "- Performing the analysis in three different levels is in some ways confusing in my opinion. Results are different for different levels and this makes difficult to have a unique and final interpretation. The ozone, as example, is a protective factor for the expected number of deaths at regional and subregional level and for the COVID-19 cases at subregional level but is not significant for the expected number of cases at regional level. I have not performed the individual level analysis but in the articole is mentioned that ozone is not significant at that level.\n",
     "- The negative and significant sign of ozone is explained in the article by saying that \"the negative association between ozone levels and COVID-19 infection and mortality may be attribuite to reduced nitrogen oxide conversion to ozone in urban areas\". I think that if ozone and nitrogen oxide are associated they should be analysed in the same multivariate model. \n",
-    "- The last problem I had was related to the creation of [covid_air_dt dataset](\"code/Air_poll_assignment.ipynb\"). Although I have used th author's python code, I get slightly different results in the average 10 nearest pollutants values. "
+    "- The last problem I had was related to the creation of [covid_air_dt dataset](code/Air_poll_assignment.ipynb). Although I have used th author's python code, I get slightly different results in the average 10 nearest pollutants values. "
    ]
   }
  ],
