--- a/code/aim1.ipynb
+++ b/code/aim1.ipynb
@@ -353,7 +353,7 @@
    "metadata": {},
    "source": [
     " <a id='preliminary-1'></a>\n",
-    "### Visualize the distribution of each variable"
+    "### preliminary-1"
    ]
   },
   {
