--- a/code/aim1.ipynb
+++ b/code/aim1.ipynb
@@ -353,7 +353,7 @@
    "metadata": {},
    "source": [
     " <a id='preliminary-1'></a>\n",
-    "### preliminary 1"
+    "### Data visualisation"
    ]
   },
   {
@@ -489,7 +489,7 @@
    "metadata": {},
    "source": [
     "<a id='deaths'></a>\n",
-    "### Analyse deaths data: linear, negative binomial and Poisson regression model "
+    "### deaths "
    ]
   },
   {
