--- a/code/aim1.ipynb
+++ b/code/aim1.ipynb
@@ -489,7 +489,7 @@
    "metadata": {},
    "source": [
     "<a id='deaths'></a>\n",
-    "### deaths "
+    "### Analyse deaths data: linear, negative binomial and Poisson regression model "
    ]
   },
   {
